--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <body>
     <p class="title">Rock Paper Scissors</p>
     <button class="move-button js-rock-button">
-      <img src="rps-images/rock-emoji.png" class="move-icon">
+      <img src="rock-emoji.png" class="move-icon">
     </button>
 
     <button class="move-button js-paper-button">
-      <img src="rps-images/paper-emoji.png" class="move-icon">
+      <img src="rps-paper-emoji.png" class="move-icon">
     </button>
 
     <button class="move-button js-scissors-button">
-      <img src="rps-images/scissors-emoji.png" class="move-icon">
+      <img src="rps-scissors-emoji.png" class="move-icon">
     </button>
 
     <p class="js-result result"></p>
