--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </button>
 
     <button class="move-button js-paper-button">
-      <img src="rps-paper-emoji.png" class="move-icon">
+      <img src="paper-emoji.png" class="move-icon">
     </button>
 
     <button class="move-button js-scissors-button">
-      <img src="rps-scissors-emoji.png" class="move-icon">
+      <img src="scissors-emoji.png" class="move-icon">
     </button>
 
     <p class="js-result result"></p>
